Restructure README with comprehensive documentation
- Add description explaining this is a realistic HTTP + PostgreSQL CRUD benchmark
- Reorganize sections: Results → Why Go Wins → Optimizations → Prerequisites → Guide
- Add contributor invitation to improve Java implementation
- Add results directory format for PRs
- Add detailed prerequisites for k6 client and HTTP server machines
- Create 3 clear options: pre-built binaries, Docker, remote EC2
- Keep API examples with curl commands
- Move AWS architecture/costs to UBUNTU-SETUP.md
- Add git clone option to UBUNTU-SETUP.md
- Add EC2 instance sizing guide with ARM64 options